--- a/register.ui
+++ b/register.ui
@@ -27,11 +27,11 @@
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>200</height>
+         <height>300</height>
         </size>
        </property>
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">border-image: url(:/pic/test.png);</string>
        </property>
       </widget>
      </item>
@@ -75,7 +75,7 @@
             <item>
              <widget class="QLabel" name="label_username_prompt">
               <property name="text">
-               <string>TextLabel</string>
+               <string>(tips if error)</string>
               </property>
              </widget>
             </item>
@@ -96,7 +96,14 @@
             <item>
              <widget class="QLabel" name="label_password_prompt">
               <property name="text">
-               <string>TextLabel</string>
+               <string>(tips if error)</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="pushButton_register_r">
+              <property name="text">
+               <string>register</string>
               </property>
              </widget>
             </item>
