--- a/Resource/Resource.qrc
+++ b/Resource/Resource.qrc
@@ -3,5 +3,6 @@
         <file>test.png</file>
         <file>test2.png</file>
         <file>test4.png</file>
+        <file>test3.jfif</file>
     </qresource>
 </RCC>
